# Percolation

./: .gitignore  CMakeLists.txt  Makefile  README.md
gui/Percolation/: CMakeLists.txt
gui/build-Percolation-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
gui/build-Percolation-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-8ce25786a8218db679d4.json  cmakeFiles-v1-2ed1c5003ed43e368143.json  codemodel-v2-ab2b19b78a779bc907ae.json  index-2023-10-08T21-39-45-0376.json  target-Percolation-Debug-01c08e76ede1ac92ff29.json  target-Percolation_autogen-Debug-13b2f60a436496920efc.json  target-Percolation_autogen_timestamp_deps-Debug-4f5f39c2b3a509134494.json
include/: percolation.h  percolation_stats.h  union_find.h
src/: main.cpp  percolation.cpp  percolation_stats.cpp  union_find.cpp
